--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ header {
     text-shadow: -3px 5px 5px #FFFFFF;
 }
 
+.pomodoro {
+    height: 100px;
+    margin-top: 5%;
+    padding-right: 35px;
+}
+
 span {
     background: blue;
     font-size: 24px;
